[tool.poetry]
name = "haystackParser"
version = "0.1.0"
description = ""
authors = ["tuscaonline <pierre.nerriere@engie.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.2"
Pint = "^0.19.2"
tzdata = "^2022.1"
python-dateutil = "^2.8.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
rich = "^12.5.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
